# tax-case-data-extraction

./: pyproject.toml
tax_case_extraction/: __init__.py  extractor.py  schemas.py
