[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-case-data-extraction"
version = "1.0.0"
description = "Automated pipeline that extracts structured information from tax case judgment PDFs using LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "UddyOrizu"}
]
keywords = ["tax", "legal", "extraction", "llm", "pdf", "nlp", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic",
    "instructor",
    "cachetools",
    "tenacity",
    "scikit-learn",
    "numpy==1.26.2",
    "pytest==7.4.2",
    "sentence-transformers",
    "truststore",
    "bs4",
    "requests",
    "pymupdf",
    "openai",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
tax-extract = "tax_case_extraction.extractor:extract"

[project.urls]
Homepage = "https://github.com/susannah-b/tax-case-data-extraction"
Repository = "https://github.com/susannah-b/tax-case-data-extraction"
Issues = "https://github.com/susannah-b/tax-case-data-extraction/issues"

[tool.setuptools]
packages = ["tax_case_extraction"]

[tool.setuptools.package-data]
tax_case_extraction = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
